-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.8, 5.15.9
-
None
-
8b71b4b570 (qt/tqtc-qtdeclarative/5.15)
The offscreen render mode is broken in Quick3D in 5.15.8, meaning most of the Quick3D examples do not work. It works still in 5.15.7. The culprit is https://codereview.qt-project.org/c/qt/tqtc-qtdeclarative/+/384094.
| For Gerrit Dashboard: QTBUG-102128 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 403113,2 | Set depth mask correctly for clear | tqtc/lts-5.15 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |