Set depth mask correctly for clear

Fixes Quick3D Offscreen render mode. The depth mask must also be set for
the clear when depth buffer is used.

Fixes: QTBUG-102128
Change-Id: Ic98133e20007449056ecca14c0fdcfa2f6f81377
Reviewed-by: Laszlo Agocs <laszlo.agocs@qt.io>